<resources>
    <string name="app_name">StudyMate</string>
    <string name="welcome_title">Welcome to StudyMate</string>
    <string name="onboarding_description">Your personal study companion to manage tasks and boost productivity</string>
    <string name="get_started">Get Started</string>
    <string name="app_logo_desc">StudyMate Logo</string>
    <string name="tagline">Your Study Companion</string>

    <!-- Login Screen -->
    <string name="welcome_back">Welcome back</string>
    <string name="sign_in_to_continue">Sign in to continue</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="enter_email">Enter Email</string>
    <string name="enter_password">Enter Password</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="sign_in">Sign In</string>
    <string name="dont_have_account">Don\'t have an account?</string>
    <string name="create_account">Create Account</string>

    <!-- Signup Screen -->
    <string name="sign_up_to_get_started">Sign up to get started</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="enter_first_name">Enter First Name</string>
    <string name="enter_last_name">Enter Last Name</string>
    <string name="enter_password_again">Enter Password Again</string>
    <string name="already_have_account">Already have an account? </string>

    <!-- Navigation Drawer -->
    <string name="nav_dev_info">Dev. Info</string>
    <string name="nav_settings">Settings</string>
    <string name="nav_exit">Exit</string>
    <string name="app_version">v1.0.0</string>
</resources>
